feat: update site content and uploads
